# Nociones-Clave-Javier-Aguado

./: CMakeLists.txt  README.md  estudiante.cpp  funciones.cpp  main.cpp  main.h  persona.cpp  persona.h
Proyecto 1/: estudiante.h  funciones.h  main.cpp
Proyecto 2/: funciones.cpp  funciones.h  main.cpp  main.h  main2.cpp  main2.h  matematicas.cpp  nuevo.cpp
